First implementation of hw12 Environmnets

--- a/Expression_Calculator/Makefile
+++ b/Expression_Calculator/Makefile
@@ -6,7 +6,7 @@ CXXFLAGS = -std=c++11 -Wall
 TARGET = msdscript
 
 # Source files and object files
-SRCS = msdscript.cpp cmdline.cpp expr.cpp parse.cpp test.cpp val.cpp
+SRCS = msdscript.cpp cmdline.cpp expr.cpp parse.cpp test.cpp val.cpp env.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 # Default target
